--- a/index.html
+++ b/index.html
@@ -5,7 +5,222 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drowning Alert System - Live Dashboard</title>
     <style>
-        /* ...[your original CSS remains unchanged]... */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            min-height: 100vh;
+            padding: 20px;
+        }
+
+        .container {
+            max-width: 1400px;
+            margin: 0 auto;
+        }
+
+        header {
+            background: white;
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+            margin-bottom: 30px;
+            text-align: center;
+        }
+
+        h1 {
+            color: #333;
+            font-size: 2.5em;
+            margin-bottom: 10px;
+        }
+
+        .subtitle {
+            color: #666;
+            font-size: 1.1em;
+        }
+
+        .status-bar {
+            display: flex;
+            gap: 20px;
+            margin-bottom: 30px;
+            flex-wrap: wrap;
+        }
+
+        .status-card {
+            flex: 1;
+            min-width: 200px;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+        }
+
+        .status-card h3 {
+            color: #666;
+            font-size: 0.9em;
+            margin-bottom: 10px;
+            text-transform: uppercase;
+        }
+
+        .status-value {
+            font-size: 2em;
+            font-weight: bold;
+            color: #333;
+        }
+
+        .status-card.emergency {
+            background: #ff4444;
+            color: white;
+            animation: pulse 2s infinite;
+        }
+
+        .status-card.emergency h3,
+        .status-card.emergency .status-value {
+            color: white;
+        }
+
+        @keyframes pulse {
+            0%, 100% { transform: scale(1); }
+            50% { transform: scale(1.05); }
+        }
+
+        .main-content {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 30px;
+            margin-bottom: 30px;
+        }
+
+        @media (max-width: 968px) {
+            .main-content {
+                grid-template-columns: 1fr;
+            }
+        }
+
+        .panel {
+            background: white;
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+        }
+
+        .panel h2 {
+            color: #333;
+            margin-bottom: 20px;
+            font-size: 1.5em;
+            border-bottom: 3px solid #667eea;
+            padding-bottom: 10px;
+        }
+
+        #map {
+            width: 100%;
+            height: 400px;
+            border-radius: 10px;
+            background: #e0e0e0;
+            margin-top: 20px;
+        }
+
+        .info-row {
+            display: flex;
+            justify-content: space-between;
+            padding: 15px;
+            border-bottom: 1px solid #eee;
+        }
+
+        .info-row:last-child {
+            border-bottom: none;
+        }
+
+        .info-label {
+            font-weight: bold;
+            color: #666;
+        }
+
+        .info-value {
+            color: #333;
+        }
+
+        .alert-list {
+            max-height: 400px;
+            overflow-y: auto;
+        }
+
+        .alert-item {
+            padding: 15px;
+            margin-bottom: 10px;
+            border-radius: 8px;
+            background: #f8f9fa;
+            border-left: 4px solid #667eea;
+        }
+
+        .alert-item.emergency {
+            background: #ffe5e5;
+            border-left: 4px solid #ff4444;
+        }
+
+        .alert-time {
+            font-size: 0.85em;
+            color: #999;
+            margin-bottom: 5px;
+        }
+
+        .alert-location {
+            font-family: monospace;
+            color: #333;
+        }
+
+        .no-data {
+            text-align: center;
+            padding: 40px;
+            color: #999;
+            font-style: italic;
+        }
+
+        .loading {
+            text-align: center;
+            padding: 20px;
+            color: #667eea;
+            font-size: 1.1em;
+        }
+
+        .coordinate-link {
+            color: #667eea;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        .coordinate-link:hover {
+            text-decoration: underline;
+        }
+
+        .badge {
+            display: inline-block;
+            padding: 5px 10px;
+            border-radius: 20px;
+            font-size: 0.85em;
+            font-weight: bold;
+        }
+
+        .badge.tracking {
+            background: #e3f2fd;
+            color: #1976d2;
+        }
+
+        .badge.emergency {
+            background: #ffebee;
+            color: #c62828;
+        }
+
+        .last-update {
+            text-align: center;
+            color: white;
+            margin-top: 20px;
+            font-size: 0.9em;
+        }
     </style>
 </head>
 <body>
@@ -103,22 +318,19 @@
             });
         }
 
-        // Format timestamp (auto-detect seconds/milliseconds)
+        // Format timestamp
         function formatTime(timestamp) {
             if (!timestamp) return 'Unknown';
-            // If timestamp is in milliseconds (>= 13 digits), use as-is
-            // If timestamp is in seconds (<= 10 digits), multiply by 1000
-            const date = new Date(timestamp > 1e12 ? timestamp : timestamp * 1000);
+            const date = new Date(timestamp * 1000);
             return date.toLocaleString();
         }
 
-        // Format relative time (auto-detect seconds/milliseconds)
+        // Format relative time
         function getRelativeTime(timestamp) {
             if (!timestamp) return 'Never';
-            const now = Date.now() / 1000; // current time in seconds
-            const ts = timestamp > 1e12 ? timestamp / 1000 : timestamp; // convert to seconds
-            const diff = now - ts;
-
+            const now = Date.now() / 1000;
+            const diff = now - timestamp;
+            
             if (diff < 60) return 'Just now';
             if (diff < 3600) return Math.floor(diff / 60) + ' min ago';
             if (diff < 86400) return Math.floor(diff / 3600) + ' hrs ago';
