--- a/index.html
+++ b/index.html
@@ -320,22 +320,27 @@
 
         // Format timestamp
         function formatTime(timestamp) {
-            if (!timestamp) return 'Unknown';
-            const date = new Date(timestamp * 1000);
-            return date.toLocaleString();
-        }
+    if (!timestamp) return 'Unknown';
+    // If timestamp is too large, assume milliseconds
+    const date = new Date(
+        timestamp > 1e12 ? timestamp : timestamp * 1000
+    );
+    return date.toLocaleString();
+}
+        
 
         // Format relative time
-        function getRelativeTime(timestamp) {
-            if (!timestamp) return 'Never';
-            const now = Date.now() / 1000;
-            const diff = now - timestamp;
-            
-            if (diff < 60) return 'Just now';
-            if (diff < 3600) return Math.floor(diff / 60) + ' min ago';
-            if (diff < 86400) return Math.floor(diff / 3600) + ' hrs ago';
-            return Math.floor(diff / 86400) + ' days ago';
-        }
+       function getRelativeTime(timestamp) {
+    if (!timestamp) return 'Never';
+    // Convert to seconds for calculation
+    const now = Date.now() / 1000;
+    const ts = timestamp > 1e12 ? timestamp / 1000 : timestamp;
+    const diff = now - ts;
+    if (diff < 60) return 'Just now';
+    if (diff < 3600) return Math.floor(diff / 60) + ' min ago';
+    if (diff < 86400) return Math.floor(diff / 3600) + ' hrs ago';
+    return Math.floor(diff / 86400) + ' days ago';
+}
 
         // Update current location panel
         function updateCurrentLocation(data, isEmergency) {
